--- a/ituxd/AndroidManifest.xml
+++ b/ituxd/AndroidManifest.xml
@@ -25,6 +25,7 @@
      <uses-permission android:name="android.permission.REBOOT" />
 
     <protected-broadcast android:name="com.intel.thermal.action.THERMAL_ZONE_STATE_CHANGED" />
+    <protected-broadcast android:name="com.intel.thermal.action.QUERY_THERMAL_PROFILE" />
 
     <application android:name=".ituxdApp" android:persistent="true">
 
